servicos front, hub-core, integration e empresa1-sgo-adapter no ar [mockados]

--- a/apps/integration/package.json
+++ b/apps/integration/package.json
@@ -1,9 +1,19 @@
-{
+﻿{
   "name": "integration",
   "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "start": "node dist/server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.10.1"
   }
 }
