--- a/apps/adapters/empresa1-sgo/package.json
+++ b/apps/adapters/empresa1-sgo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "start": "node dist/server.js"
   }
 }
